New and final code

--- a/Bean And Brew Go.html
+++ b/Bean And Brew Go.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,13 +5,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  
+<style>
+ body {
+  background-image: url('coffee bean background 2.jpg');
+  opacity: 0.95;
+}
+</style>
 </head>
 
 
 <header>
   <div class="row">
     <div class="column">
-      <img src="Bean And Brew Logo 4.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
+      <img src="Bean And Brew Logo 5.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
     </div>
     <div class="column">
       <h1 style="font-size:50px; text-align:center;" > Bean And Brew</h1>
@@ -37,78 +43,78 @@
   <h1> Bean And Brew Go</h1>
   <p style="font-size:20px;text-align:left;"> Allows are customers you to pay online and pick it up in person</p>
   <p style="font-size:20px;text-align:left;" > At one of are restaurants, this makes it easier for you</p>
-  <p style="font-size:20px;text-align:left;"> restaurants locations: Harrogate, Leeds, Knaresborough Castle</p>
+  <p style="font-size:20px;text-align:left;"> Restaurants locations: Harrogate, Leeds and Knaresborough Castle</p>
 
 </article>
 
-<article style="padding: 20px; width: 100%; height: 300px; background-color: #cca22d;color: white;">
+<article style="padding: 20px; width: 100%; height: 100%; background-color: rgb(94, 63, 43);color: white;">
   
   <form action="/action_page.php">
-    <div class="row">
+    <div class="row"><!--this is the first lot of products which can be selected, image and price can be changed--><!--user will be bale to click on the product box to order-->
       <div class="column" style="font-size:20px; text-align:center;">
-        <img src="coffee cup.jpg" alt="Product image" style="width:200px;height:250px;"><br>
+        <img src="coffee cup.jpg" alt="Product image" style="width:200px;"><br>
         <input type="checkbox" id="Product4" name="Product4" value="Product4">
       <label for="Product4"> Name (Price)</label><br>
       </div>
       <div class="column" style="font-size:20px; text-align:center;">
-        <img src="coffee cup.jpg" alt="Product image" style="width:200px;height:250px;"><br>
+        <img src="coffee cup.jpg" alt="Product image" style="width:200px;"><br>
         <input type="checkbox" id="Product5" name="Product5" value="Product5">
       <label for="Product5"> Name (Price)</label><br>
     </div>
     <div class="column" style="font-size:20px; text-align:center;">
-      <img src="coffee cup.jpg" alt="Product image" style="width:200px;height:250px;"><br>
+      <img src="coffee cup.jpg" alt="Product image" style="width:200px;"><br>
       <input type="checkbox" id="Product6" name="Product6" value="Product6">
     <label for="Product6"> Name (Price)</label><br>
      </div>
   </form>
 </article>
 
-<article style="padding: 20px; width: 100%; height: 300px; background-color: #cca22d;color: white;">
+<article style="padding: 20px; width: 100%; height: 100%; background-color: rgb(94, 63, 43);color: white;">
   
   <form action="/action_page.php">
-    <div class="row">
+    <div class="row"><!--this is the second lot of products which can be selected, image and price can be changed-->
       <div class="column" style="font-size:20px; text-align:center;">
-        <img src="tea.jpg" alt="Product image" style="width:200px;height:250px;"><br>
+        <img src="tea.jpg" alt="Product image" style="width:200px;"><br>
         <input type="checkbox" id="Product4" name="Product4" value="Product4">
       <label for="Product4"> Name (Price)</label><br>
       </div>
       <div class="column" style="font-size:20px; text-align:center;">
-        <img src="tea.jpg" alt="Product image" style="width:200px;height:250px;"><br>
+        <img src="tea.jpg" alt="Product image" style="width:200px;"><br>
         <input type="checkbox" id="Product5" name="Product5" value="Product5">
       <label for="Product5"> Name (Price)</label><br>
     </div>
     <div class="column" style="font-size:20px; text-align:center;">
-      <img src="tea.jpg" alt="Product image" style="width:200px;height:250px;"><br>
+      <img src="tea.jpg" alt="Product image" style="width:200px;"><br>
       <input type="checkbox" id="Product6" name="Product6" value="Product6">
     <label for="Product6"> Name (Price)</label><br>
      </div>
   </form>
 </article>
 
-<article style="padding: 20px; width: 100%; height: 300px; background-color: #cca22d;color: white;">
+<article style="padding: 20px; width: 100%; height: 100%; background-color: rgb(94, 63, 43);color: white;">
   
   <form action="/action_page.php">
-    <div class="row">
+    <div class="row"><!--this is the third lot of products which can be selected, image and price can be changed-->
       <div class="column" style="font-size:20px; text-align:center;">
-        <img src="croissant.jpg" alt="Product image" style="width:200px;height:250px;"><br>
+        <img src="croissant.jpg" alt="Product image" style="width:200px;"><br>
         <input type="checkbox" id="Product4" name="Product4" value="Product4">
       <label for="Product4"> Name (Price)</label><br>
       </div>
       <div class="column" style="font-size:20px; text-align:center;">
-        <img src="croissant.jpg" alt="Product image" style="width:200px;height:250px;"><br>
+        <img src="croissant.jpg" alt="Product image" style="width:200px;"><br>
         <input type="checkbox" id="Product5" name="Product5" value="Product5">
       <label for="Product5"> Name (Price)</label><br>
     </div>
     <div class="column" style="font-size:20px; text-align:center;">
-      <img src="croissant.jpg" alt="Product image" style="width:200px;height:250px;"><br>
+      <img src="croissant.jpg" alt="Product image" style="width:200px;"><br>
       <input type="checkbox" id="Product6" name="Product6" value="Product6">
     <label for="Product6"> Name (Price)</label><br>
      </div>
   </form>
 </article>
 
-<article style="padding: 20px; width: 100%; height: 260px; background-color: #be9524;color: white;">
-  <form action="/action_page.php">
+<article style="padding: 20px; width: 100%; height: 100%; background-color: rgb(122, 96, 23);color: white;">
+  <form action="/action_page.php"><!--this is how the user can order a product to be picked up--><!--the user is able to input words here-->
       <label for="fname">First name:</label><br>
       <input type="text" id="fname" name="fname" value=""><br>
 
@@ -118,10 +124,10 @@
       <label for="Ename">Email address:</label><br>
       <input type="text" id="Ename" name="Ename" value=""><br>
 
-      <label for="lname">Restaurant:</label><br>
+      <label for="lname">Restaurant:</label><br><!--this is where they enter the restautrant where they will pick it up-->
       <input type="text" id="Rname" name="Rname" value=""><br>
 
-      <label for="lname">Time:</label><br>
+      <label for="lname">Time:</label><br><!--this is when they will pick it up-->
       <input type="text" id="Tname" name="Tname" value=""><br><br>
       <input type="submit" value="Submit">
     </div>
@@ -131,7 +137,7 @@
 
 
 <footer>
-  Footer
+footer
 </footer>
 
 
