--- a/Bean And Brew.html
+++ b/Bean And Brew.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,13 +5,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+<!--this makes the background the coffee image-->
+<style>
+ body {
+  background-image: url('coffee bean background 2.jpg');
+  opacity: 0.95;
+}
+</style>
 </head>
 
 
 <header>
   <div class="row">
-    <div class="column">
-      <img src="Bean And Brew Logo 4.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
+    <div class="column"><!--this splits the header into two allowing the logo and title to be next to each other-->
+      <img src="Bean And Brew Logo 5.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
     </div>
     <div class="column">
       <h1 style="font-size:50px; text-align:center;" > Bean And Brew</h1>
@@ -20,9 +26,8 @@
   </div>
 </header>
 
-
 <nav>
-  <ul>
+  <ul><!--this is the navigation bar with th elinks to other pages,_self makes it so when you click on a new page it replaces the window and not creates a new one-->
     <li><a href="Bean And Brew.html" target="_self">Home</a>
     <li><a href="About Us.html" target="_self">About Us</a>
     <li><a href="Bean And Brew Go.html" target="_self">Bean And Brew Go</a>
@@ -37,7 +42,15 @@
 <p style="font-size:20px;text-align:left;">Bean and Brew were one of the first companies in the UK to use fair-trade coffee and all organic milk for their products. Each drink is made exactly to your specifications, for a personal service. We also offer trademarked flavoured coffees, breakfast items such as porridge, small sweet treats, and pressed sandwiches. We have also added frappes and fruit smoothies in addition to seasonal treats such as the pumpkin spiced latte (for Halloween) and various assorted baked goods.</p>
 </article>
 
+<!--the giberish is filler text and temporarily-->
+<article style="padding: 20px; width: 100%; height: 100%; background-color: rgb(122, 96, 23);color: white;"> 
+<p style="font-size:20px;text-align:center;">Ticahu detud holegon naril! Liesie lisape siyo remosen ibice; qori voseyi osu ereyun penapu yolamu ter, betes irosot tot levused ewacel senir nasopih. Atecamies cahate risafin gic mocoye; iloh eratesie telo wirupo. Pug yef ha egovipo tef egusigat, re evarate cay na! Mireleg nam pegu bereli exi bolani ilefeleh neluday! Po adopolim ecet sera yas! Cafu legi eleyin fanod rebiwo eyatore seni gedesig edutiney. Rexal ehimelog no deyun lotinus sotac ro nar robalec luge.<p>
+<p style="font-size:20px;text-align:center;">oluh, enecat lecena wo poriegi renere tieme? Ribumas som he sie elit noyetir yamip pesobe fe tot. Liso raqol mirate lila; asasimal rupuled oleriro reya teheher ehera re gevo yi. Lamet macal sapa hus yiye, gapav liroye odehuso saperat me hi foser dimica senu sehotuw. Taporup waro nefo.<p>
+<p style="font-size:20px;text-align:center;">Upenal ocakalie arade oretene bomie repone ye abirane po ray. Nameroh retiet bot milege xoleroc sarievo ri teg. Ney di menenen vol acavilig pip meso tevecel: Go rutav esafam yen tufof dunuluq miciewom luvada ce: Ienie abica cesag fen ci, yatece lumiy su itis to cor gi, do hi tus pif pun ratiev. Edatalu ure iror lare horet irer agak secahe te. Elacet hesana cocod odarel isi ciha re, nor ti omeco, tat riesimo ayot tepohi patilo lo robu si la.
+
+</article>
+
 <footer>
-    Footer
+   footer
 </footer>
 </html>
