--- a/Contact Us.html
+++ b/Contact Us.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,13 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+<style>
+ body {
+  background-image: url('coffee bean background 2.jpg');
+  opacity: 0.95;
+}
+</style>
 </head>
 
 
 <header>
   <div class="row">
     <div class="column">
-      <img src="Bean And Brew Logo 4.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
+      <img src="Bean And Brew Logo 5.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
     </div>
     <div class="column">
       <h1 style="font-size:50px; text-align:center;" > Bean And Brew</h1>
@@ -34,27 +39,21 @@
 
 <article>
   <h1> Social media:</h1>
-  <div class="row">
-    <div class="column">
-    
-    </div>
-    <div class="column">
     
       <h1 style="font-size:20px;text-align:left;" > Facebook: BeanAndBrewFaceBook</h1>
       <h1 style="font-size:20px;text-align:left;" > Instagram: BeanAndBrewInstagram</h1>
       <h1 style="font-size:20px;text-align:left;" > Twitter: BeanAndBrewTwitter</h1>
       <h1 style="font-size:20px;text-align:left;" > Pinterest: BeanAndBrewPinterest</h1>
-    </div>
-  </div>
+   
 </article>
 
-<article style="padding: 20px; width: 100%; height: 300px; background-color: #cca22d;color: white;">
+<article style="padding: 20px; width: 100%; height: 100%; background-color: rgb(122, 96, 23);color: white;">
   <p style="font-size:20px;text-align:left;"> Email: BeanAndBrew@gmail.com</p>
   <p style="font-size:20px;text-align:left;"> Restaurants locations:  Harrogate, Leeds, Knaresborough Castle</p>
 </article>
 
 <footer>
-    Footer
+ footer
 </footer>
 </html>
 
