--- a/About Us.html
+++ b/About Us.html
@@ -5,13 +5,20 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+  
+<style>
+ body {
+  background-image: url('coffee bean background 2.jpg');
+  opacity: 0.95;
+}
+</style>
 </head>
 
 
 <header>
   <div class="row">
     <div class="column">
-      <img src="Bean And Brew Logo 4.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
+      <img src="Bean And Brew Logo 5.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
     </div>
     <div class="column">
       <h1 style="font-size:50px; text-align:center;" > Bean And Brew</h1>
@@ -33,21 +40,32 @@
 
 <article>
   <h1> About Us</h1>
-  <p style="font-size:20px;text-align:left;"> Book a space at one of the 3 local restaurants (Harrogate, Leeds, Knaresborough Castle)</p> 
-  <p style="font-size:20px;text-align:left;"> Be able to pre-order a coffee for collection</p>
-  <p style="font-size:20px;text-align:left;">Pre-order baked goods for collection</p>
-  <p style="font-size:20px;text-align:left;">Customisable baked goods hampers</p>
-  <p style="font-size:20px;text-align:left;">Creating customer accounts to speed up re-ordering</p>
-  <p style="font-size:20px;text-align:left;">Allow customers to pre-book (online) baking lessons</p>
+  <p style="font-size:20px;text-align:left;">Bean and Brew were one of the first companies in the UK to use fair-trade coffee and all organic milk for their products. Each drink is made exactly to your specifications, for a personal service. We also offer trademarked flavoured coffees, breakfast items such as porridge, small sweet treats, and pressed sandwiches. We have also added frappes and fruit smoothies in addition to seasonal treats such as the pumpkin spiced latte (for Halloween) and various assorted baked goods.</p>
 </article>
 
-<article style="padding: 20px; width: 100%; height: 300px; background-color: #d13b3b;color: white;">
-  
+<article style="padding: 20px; width: 100%; height: 100%; background-color: rgb(122, 96, 23);color: white;"> 
+  <div class="row">
+    <div class="column">
+      <img src="man drinking coffee.jpg" alt="man drinking coffee" style="width:300px;height:250px;">
+    </div>
+    <div class="column">
+      <p style="font-size:20px;text-align:center;">oluh, enecat lecena wo poriegi renere tieme? Ribumas som he sie elit noyetir yamip pesobe fe tot. Liso raqol mirate lila; asasimal rupuled oleriro reya teheher ehera re gevo yi. Lamet macal sapa hus yiye, gapav liroye odehuso saperat me hi foser dimica senu sehotuw. Taporup waro nefo.<p>
+    </div>
+	<div class="column">
+      <p style="font-size:20px;text-align:center;">Upenal ocakalie arade oretene bomie repone ye abirane po ray. Nameroh retiet bot milege xoleroc sarievo ri teg. Ney di menenen vol acavilig pip meso tevecel: Go rutav esafam yen tufof dunuluq miciewom luvada ce: Ienie abica cesag fen ci, yatece lumiy su itis to cor gi, do hi tus pif pun ratiev.<p>
+    </div>
+  </div>
+
+
 
 </article>
+
+
 
 <footer>
-  Footer
+footer
 </footer>
 
 </html>
+
+<!--  -->
