--- a/Booking.html
+++ b/Booking.html
@@ -5,13 +5,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+<style>
+ body {
+  background-image: url('coffee bean background 2.jpg');
+  opacity: 0.95;
+}
+</style>
 </head>
 
 
 <header>
   <div class="row">
     <div class="column">
-      <img src="Bean And Brew Logo 4.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
+      <img src="Bean And Brew Logo 5.jpg" alt="Bean And Brew Logo" style="width:200px;height:200px;">
     </div>
     <div class="column">
       <h1 style="font-size:50px; text-align:center;" > Bean And Brew</h1>
@@ -42,9 +48,11 @@
 
 
 
-<article style="padding: 20px; width: 100%; height: 310px; background-color: #be9524;color: white;">
+<article style="padding: 20px; width: 100%; height: 100%; background-color: rgb(122, 96, 23);color: white;">
   
-    <form action="/action_page.php">
+  <div class="row">
+    <div class="column">
+      <form action="/action_page.php">
         <p>Fill in your name Email address and what time you would like to attend</p>
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value=""><br>
@@ -55,20 +63,29 @@
         <label for="Ename">Email address:</label><br>
         <input type="text" id="Ename" name="Ename" value=""><br>
   
-        <label for="lname">Restaurant:</label><br>
+        <label for="Rname">Restaurant:</label><br>
         <input type="text" id="Rname" name="Rname" value=""><br>
   
-        <label for="lname">Lesson Time:</label><br>
+        <label for="Tname">Lesson Time:</label><br>
         <input type="text" id="Tname" name="Tname" value=""><br><br>
         <input type="submit" value="Submit">
-      </div>
-  
-    </form> 
+		</form> 
+		</div>
+	  
+	  
+    <div class="column">
+      <img src="making coffee.jpg" alt="Bean And Brew Logo" style="width:400px;height:280px;">
+    </div>
+	<div class="column">
+      <img src="making coffee2.jpg" alt="Bean And Brew Logo" style="width:400px;height:280px;">
+    </div>
+  </div>
+
 
 </article>
 
 
 <footer>
-    Footer
+ footer
 </footer>
 </html>
